[gd_scene load_steps=13 format=3 uid="uid://clqd5uwc34gev"]

[ext_resource type="Script" uid="uid://b30iw2r63wx5t" path="res://scripts/alien.gd" id="1_yq7wc"]
[ext_resource type="Texture2D" uid="uid://bybf1qmtvk2v1" path="res://textures/sword.png" id="2_88y0w"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d0asn"]
size = Vector2(12, 18)

[sub_resource type="Curve" id="Curve_7jyap"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Animation" id="Animation_re54w"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_88y0w"]
resource_name = "hit"
length = 0.2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(0.2, 1),
"update": 0,
"values": [0.0, 1.5708]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:monitoring")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_so0rn"]
_data = {
&"RESET": SubResource("Animation_re54w"),
&"hit": SubResource("Animation_88y0w")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_re54w"]
radius = 2.12059
height = 16.9647

[sub_resource type="Animation" id="Animation_25256"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:monitoring")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_5ig2d"]
resource_name = "hit"
length = 0.2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(0.2, 1),
"update": 0,
"values": [0.0, -1.5708]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:monitoring")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c1lgq"]
_data = {
&"RESET": SubResource("Animation_25256"),
&"hit": SubResource("Animation_5ig2d")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_so0rn"]
radius = 2.12
height = 16.96

[node name="Alien" type="CharacterBody2D"]
scale = Vector2(4, 4)
script = ExtResource("1_yq7wc")

[node name="CollisionShape" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
shape = SubResource("RectangleShape2D_d0asn")

[node name="FoodDust" type="CPUParticles2D" parent="."]
position = Vector2(0, 12)
amount = 12
lifetime = 0.5
lifetime_randomness = 0.6
emission_shape = 4
emission_points = PackedVector2Array(-4, 0, 4, 0)
emission_colors = PackedColorArray()
direction = Vector2(0, -1)
spread = 60.0
gravity = Vector2(0, 0.15)
initial_velocity_min = 10.0
initial_velocity_max = 25.0
angular_velocity_min = 10.0
angular_velocity_max = 20.0
radial_accel_min = 35.0
radial_accel_max = 35.0
damping_min = 30.0
damping_max = 30.0
scale_amount_min = 6.0
scale_amount_max = 10.0
scale_amount_curve = SubResource("Curve_7jyap")
color = Color(0.658515, 0.605343, 0.628021, 1)

[node name="RightSword" type="Area2D" parent="."]
visible = false
position = Vector2(8, 2.5)
collision_layer = 0
collision_mask = 0
monitoring = false

[node name="Animation" type="AnimationPlayer" parent="RightSword"]
libraries = {
&"": SubResource("AnimationLibrary_so0rn")
}

[node name="CollisionShape" type="CollisionShape2D" parent="RightSword"]
position = Vector2(8, -8)
rotation = -2.35619
shape = SubResource("CapsuleShape2D_re54w")

[node name="Sprite" type="Sprite2D" parent="RightSword"]
z_index = 1
texture = ExtResource("2_88y0w")
offset = Vector2(7, -7)

[node name="LeftSword" type="Area2D" parent="."]
visible = false
position = Vector2(-8, 2.5)
collision_layer = 0
collision_mask = 0
monitoring = false

[node name="Animation" type="AnimationPlayer" parent="LeftSword"]
libraries = {
&"": SubResource("AnimationLibrary_c1lgq")
}

[node name="Sprite" type="Sprite2D" parent="LeftSword"]
z_index = 1
position = Vector2(-14, 0)
texture = ExtResource("2_88y0w")
offset = Vector2(7, -7)
flip_h = true

[node name="CollisionShape" type="CollisionShape2D" parent="LeftSword"]
position = Vector2(-8, -8)
rotation = -0.785398
shape = SubResource("CapsuleShape2D_so0rn")
